--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -33,5 +33,5 @@ jobs:
       - run: npm install -g surge
       
       - name: Run Surge
-      - run: surge ./ syedateeq.surge.sh --token ${{secret.SURGE_TOKEN}}
+      - run: surge ./ syedateeq.surge.sh --token ${{secrets.SURGE_TOKEN}}
             
