--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -30,8 +30,8 @@ jobs:
         with:
           node-version: 12
       - name : Install Surge
-      - run: npm install -g surge
+        run: npm install -g surge
       
       - name: Run Surge
-      - run: surge ./ syedateeq.surge.sh --token ${{secrets.SURGE_TOKEN}}
+        run: surge ./ syedateeq.surge.sh --token ${{secrets.SURGE_TOKEN}}
             
